feat : 누락된 dto 수정 반영