@@ -7,12 +7,16 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Builder
-public record ProductKeywordResponse(
-    List<String> response
-) {
+public record ProductKeywordResponse(List<KeywordItem> response) {
     public static ProductKeywordResponse of(List<ProductKeyword> keywords) {
         return ProductKeywordResponse.builder()
-            .response(keywords.stream().map(ProductKeyword::getName).collect(Collectors.toList()))
-            .build();
+            .response(
+                keywords.stream().map(entity ->
+                    new KeywordItem(entity.getName(), entity.getKeywordUrl())
+                ).toList()).build();
     }
+    public record KeywordItem(
+        String keyword,
+        String keywordUrl
+    ) { }
 }
